--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h4,
 h5,
 h6,
 p {
-    font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+    font-family: 'Source Sans 3', Helvetica, Arial, sans-serif;
     font-weight: 300;
     line-height: 1em;
     color: white;
